# meetwise

./: .gitignore  README.md  REPORT.txt  dfnsfd  pullRequestLinks.md  test.md
.github/: PULL_REQUEST_TEMPLATE.md  pull_request_template.md
.github/.workflows/: updatePRTemplate.yml
.github/PULL_REQUEST_TEMPLATE/: bug.md  chore.md  docs.md  feature.md  refactor.md
.github/workflows/: updatePRTemplate.yml
backend/: DatabaseSchema.md  Enums.py  Errors.py  IOSchema.py  Meeting.py  Meetings.py  OrganisationHelpers.py  Organisations.py  Todos.py  UserAccounts.py  app.py  audio_transcription.py  cookies.txt  database.py  main.py  meetwise.db  meetwise.db-client_wal_index  meetwise.db-shm  meetwise.db-wal  pyproject.toml
backend/Meeting/: Meetings.py  Todos.py
backend/Meeting/Processing/: Meeting.py  app.py  audio_transcription.py
backend/Organisation/: OrganisationHelpers.py  Organisations.py  Team.py  TeamHelpers.py
backend/Profile/: Authentication.py  UserAccounts.py
backend/States/: Errors.py  IOSchema.py  Logging.py
backend/database/: database.py
backend/testFiles/: REPORT.txt  sample1.txt  transcription.txt
frontend/: package-lock.json  package.json  schema.txt
frontend/src/: App.js  App.jsx  index.css  index.js
frontend/src/components/Authentication/: LogInForm.jsx  SignUpForm.jsx  SignUpForm.module.css
frontend/src/pages/: AboutUs.jsx  AboutUs.module.css  Home.jsx  Home.module.css  NotFoundPage.jsx  NotFoundPage.module.css  NotPermittedPage.jsx  NotPermittedPage.module.css  SignUp.jsx  SignUp.module.css
frontend/src/store/: auth-context.jsx
(+57 files in other folders)
